--- a/index.html
+++ b/index.html
@@ -9,18 +9,33 @@
 <body>
     <table class="cat">
         <tr class="cat__head">
-            <td class="cat__ear">
+            <td class="cat__head__left" rowspan="2">
                 <img src="./cat/cat_01.jpg" alt="head-left">
             </td> 
-            <td class="cat__head">
+            <td class="cat__head__middle" rowspan="2">
                 <img src="./cat/cat_02.png" alt="head-middle">
             </td>
-            <td class="cat__head">
+            <td class="cat__head__right">
                 <img src="./cat/cat_03.png" alt="head-right">
             </td>
         </tr>
-        
-        
+        <tr class="cat__lobe">
+            <td class="cat__lobe__right" rowspan="2">
+                <img src="./cat/cat_04.png" alt="lobe-right">
+            </td>
+        </tr>
+        <tr class="cat__face">
+            <td class="cat__face__left" colspan="2">
+                <img src="./cat/cat_05.png" alt="face-left">
+            </td>
+        </tr>
+        <tr class="cat__mouth">
+            <td class="cat__mouth__left">
+                <img src="./cat/cat_06.png" alt="mouth-left">
+            </td><td class="cat__mouth__right" colspan="2">
+                <img src="./cat/cat_07.png" alt="mouth-right">
+            </td>
+        </tr>
     </table>
 </body>
 </html>
