--- a/index.html
+++ b/index.html
@@ -10,30 +10,61 @@
     <table class="cat">
         <tr class="cat__head">
             <td class="cat__head__left" rowspan="2">
-                <img src="./cat/cat_01.jpg" alt="head-left">
+                <img src="./cat/cat_01.jpg" alt="c-head-left">
             </td> 
             <td class="cat__head__middle" rowspan="2">
-                <img src="./cat/cat_02.png" alt="head-middle">
+                <img src="./cat/cat_02.png" alt="c-head-middle">
             </td>
             <td class="cat__head__right">
-                <img src="./cat/cat_03.png" alt="head-right">
+                <img src="./cat/cat_03.png" alt="c-head-right">
             </td>
         </tr>
         <tr class="cat__lobe">
             <td class="cat__lobe__right" rowspan="2">
-                <img src="./cat/cat_04.png" alt="lobe-right">
+                <img src="./cat/cat_04.png" alt="c-lobe-right">
             </td>
         </tr>
         <tr class="cat__face">
             <td class="cat__face__left" colspan="2">
-                <img src="./cat/cat_05.png" alt="face-left">
+                <img src="./cat/cat_05.png" alt="c-face-left">
             </td>
         </tr>
         <tr class="cat__mouth">
             <td class="cat__mouth__left">
-                <img src="./cat/cat_06.png" alt="mouth-left">
+                <img src="./cat/cat_06.png" alt="c-mouth-left">
             </td><td class="cat__mouth__right" colspan="2">
-                <img src="./cat/cat_07.png" alt="mouth-right">
+                <img src="./cat/cat_07.png" alt="c-mouth-right">
+            </td>
+        </tr>
+    </table>
+    <table class="dog">
+        <tr class="dog__head">
+            <td class="dog__head__left">
+                <img src="./dog/ulybaka_01.jpg" alt="d-head-left">
+            </td>
+            <td class="dog__head__middle" rowspan="3">
+                <img src="./dog/ulybaka_02.jpg" alt="d-head-middle">
+            </td>
+            <td class="dog__head__right">
+                <img src="./dog/ulybaka_03.jpg" alt="d-head-right">
+            </td>
+        </tr>
+        <tr class="dog__mouth">
+            <td class="dog__mouth__left" rowspan="3">
+                <img src="./dog/ulybaka_04.jpg" alt="d-mouth-left">
+            </td>
+            <td class="dog__mouth__right">
+                <img src="./dog/ulybaka_05.jpg" alt="d-mouth-right">
+            </td>
+        </tr>
+        <tr class="dog__backlegs">
+            <td class="dog__backlegs__right">
+                <img src="./dog/ulybaka_06.jpg" alt="backlegs-right">
+            </td>
+        </tr>
+        <tr class="dog__frontlegs">
+            <td class="dog__frontlegs__right" colspan="2">
+                <img src="./dog/ulybaka_07.jpg" alt="frontlegs-right">
             </td>
         </tr>
     </table>
