--- a/index.html
+++ b/index.html
@@ -68,5 +68,44 @@
             </td>
         </tr>
     </table>
+
+    <table class="table">
+        <tbody class="table__tbody">
+            <tr class="table__row">
+                <td class="table__col table__col--main" colspan="2"></td>
+                <td class="table__col table__col--main" colspan="2"></td>
+                <td class="table__col table__col--additional" colspan="2"></td>
+                <td class="table__col table__col--main" rowspan="4"></td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__col table__col--main"></td>
+                <td class="table__col table__col--secondary" colspan="3" rowspan="2"></td>
+                <td class="table__col table__col--additional" colspan="2"></td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__col table__col--main" rowspan="2"></td>
+                <td class="table__col table__col--main"></td>
+                <td class="table__col table__col--main"></td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__col table__col--filled" colspan="2" rowspan="2"></td>
+                <td class="table__col table__col--main"></td>
+                <td class="table__col table__col--main" colspan="2"></td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__col table__col--additional" rowspan="3"></td>
+                <td class="table__col table__col--main"></td>
+                <td class="table__col table__col--unique" colspan="2" rowspan="2"></td>
+                <td class="table__col table__col--secondary" rowspan="3"></td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__col table__col--main" colspan="2" rowspan="2"></td>
+                <td class="table__col table__col--filled"></td>
+            </tr>
+            <tr class="table__row">
+                <td class="table__col table__col--main" colspan="3"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
